<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/filter_by"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/select_all" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="0dp"
        android:padding="0dp">

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_clockin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clockin" />

    <CheckBox
        android:id="@+id/cb_allday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_day" />

    <CheckBox
        android:id="@+id/cb_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_duration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_not_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_not_started" />

    <CheckBox
        android:id="@+id/cb_in_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_in_progress" />

    <CheckBox
        android:id="@+id/cb_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_completed" />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_apply_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/filter" />
    </LinearLayout>
</LinearLayout>
