<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Search by title -->
    <SearchView
        android:id="@+id/search_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_task_hint"
        android:background="@drawable/bg_searchview"
        android:paddingBottom="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_card_input">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/text_sort_label"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_download"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black" />

        </LinearLayout>
    <!-- Sort row: label + spinner with custom background + arrow -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">

        <!-- Container so we can overlay the arrow icon on top of the spinner -->
        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <Spinner
                android:id="@+id/spinner_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:paddingLeft="0dp"
                android:paddingVertical="8dp"
                android:paddingRight="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_status_spinner_white"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/img_filter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:src="@drawable/ic_filter"
            android:contentDescription="Filter options" />

        <ImageView
            android:id="@+id/img_import"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:src="@drawable/ic_upload"
            android:contentDescription="Import CSV" />

        <ImageView
            android:id="@+id/img_export"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_download"
            android:contentDescription="Sort options" />


    </LinearLayout>
    </LinearLayout>
    <!-- Task list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp"/>
</LinearLayout>
